# py_webauthn

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: build_and_test.yml
tests/: test_verify_registration_response_android_key.py
webauthn/helpers/: known_root_certs.py  parse_cbor.py
webauthn/helpers/asn1/: android_key.py
webauthn/registration/formats/: android_key.py
